# ME-433

HW2/: code.py
HW2/HW2/: CMakeLists.txt  HW2.c
HW3/: HW3.c
HW4/: CMakeLists.txt  HW4.c
HW5/: CMakeLists.txt  HW5.c
HW6/: CMakeLists.txt  main.c  usb_descriptors.c  usb_descriptors.h
HW7/: CMakeLists.txt  HW7.c
HW8/: CMakeLists.txt  HW8.c
